# ai-hackathon

./: README.md  aqua.yaml  biome.json  marp.md  next.config.js  package.json  pnpm-lock.yaml  run.sh
.github/workflows/: ci.yaml
backend/: README.md  main.py  menu.sh  pyproject.toml  test.sh  test_upload.py
docs/: ref.md  rules.md
docs/memo/: menu_suggestion.md
src/: test.json
src/app/: layout.tsx  page.tsx
src/app/add/: page.tsx
src/app/api/chat/: route.ts
src/app/api/expiration/: route.ts
src/app/api/health/: route.test.ts  route.ts
src/app/api/menu/: route.ts
src/app/api/seed/: route.ts
src/app/edit/: page.tsx
src/app/edit_and_create/: page.tsx
src/app/expiration/: page.tsx
src/app/graph/: page.tsx
src/app/photo/: page.tsx
src/app/recipe/: page.tsx
src/app/seed/: page.tsx
src/app/select-foods/: page.tsx
src/components/: Notification.tsx  RecipeSuggestion.tsx  SelectableFoodCard.tsx  StorageTest.tsx
src/components/ui/: ProductFilter.tsx  button.tsx  graph.tsx  toaster.tsx  use-toast.tsx
src/hooks/: useSelectedItems.ts  useStorage.ts
src/theme/: theme.ts
src/types/: notification.tsx  response.ts
